[package]
name = "nes"
version = "0.1.0"
authors = ["GGBBB2000 <ggbbb@mineo.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_primitive = "*"
num-traits = "0.2"
opencv = {version = "0.17", default-features = false, features = ["opencv-41"]}
